# sil-backend

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  conftest.py   docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  si-backend-api-0.1.0.tgz  si-notifications-worker-0.1.0.tgz
.github/workflows/: ci-docker-compose.yml  ci.yml  deploy-to-openshift.yml
accounts/: admin.py  authentication.py  models.py
accounts/migrations/: 0001_initial.py
accounts/tests/: test_auth.py
catalog/: admin.py  models.py  serializers.py  views.py
catalog/migrations/: 0001_initial.py
catalog/tests/: test_catalog.py
config/: celery.py  exceptions.py  settings.py  urls.py
docs/:  CONTRIBUTING.md  README.md  openapi.json  package-lock.json  package.json  redoc.html
docs/swagger/: index.html
helm/keycloak/: Chart.yaml  values.yaml
helm/keycloak/templates/: route.yaml
helm/si-backend-api/: Chart.yaml  values.yaml
helm/si-backend-api/templates/: deployment.yaml  route.yaml  service.yaml
helm/si-keycloak/: Chart.yaml  values.yaml
helm/si-keycloak/templates/: _helpers.tpl  route.yaml
helm/si-notifications-worker/: Chart.yaml  values.yaml
helm/si-notifications-worker/templates/: deployment.yaml  service.yaml
keycloak/: realm-export.json
notifications/: publisher.py  tasks.py  worker.py
notifications/tests/: test_notifications.py
openshift/: keycloak-defaultdb.yaml  keycloak-deploy.yaml  keycloak-deployment.yaml  si-keycloak-route.yaml
orders/: admin.py  models.py  serializers.py  views.py
orders/migrations/: 0001_initial.py
orders/tests/: test_orders.py
wheelhouse/: cachetools-6.0.0-py3-none-any.whl  django_mptt-0.17.0-py3-none-any.whl  drf_oidc_auth-3.0.0-py2.py3-none-any.whl
