[tool.poetry]
name = "si-backend"
version = "0.1.0"
description = ""
authors = ["danwinga <danwinga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.1"
djangorestframework = "^3.16.0"
psycopg2-binary = "^2.9.10"
django-environ = "^0.12.0"
django-cors-headers = "^4.7.0"
django-mptt = "^0.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-django = "^4.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
